Newest info and updates to style guide

--- a/new/accessibility/colour-en.html
+++ b/new/accessibility/colour-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -36,15 +38,15 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="../design/alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="../design/colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Design guide</span></a> <a href="../design/labels-en.html" class="list-group-item">Labels<span class="wb-inv"> - Design guide</span></a> <a href="../design/panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="../design/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
-      <h2 id="ct">Colour contrast</h2>
+      <h2 class="page-header" id="ct">Colour contrast</h2>
     </div>
   </div>
   <div class="row">
@@ -77,7 +79,7 @@
       </div>
     </div>
   </div>
-  <h2 id="us">Colour use </h2>
+  <h2 class="page-header" id="us">Colour use </h2>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
@@ -123,7 +125,7 @@
       </table>
     </div>
   </div>
-  <h2 id="con">Accessibility considerations</h2>
+  <h2 class="page-header" id="con">Accessibility considerations</h2>
   <h3>Visual impairments</h3>
   <ul>
     <li>
@@ -141,7 +143,7 @@
       </ul>
     </li>
   </ul>
-  <h2 id="links">Related WCAG links </h2>
+  <h2 class="page-header" id="links">Related WCAG links </h2>
   <p>Web Content Accessibility Guidelines (WCAG) 2.0 Success Criteria:</p>
   <ul>
     <li><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-without-color.html" rel="external">1.4.1 Use of Colour</a></li>
@@ -152,7 +154,7 @@
     <li><a href="http://www.w3.org/TR/2012/NOTE-WCAG20-TECHS-20120103/G18" rel="external">G18: Ensuring that a contrast ratio of at least 4.5:1 exists between text (and images of text) and background behind the text.</a></li>
     <li><a href="http://www.w3.org/TR/2012/NOTE-WCAG20-TECHS-20120103/G145" rel="external">G145: Ensuring that a contrast ratio of at least 3:1 exists between text (and images of text) and background behind the text.</a></li>
   </ul>
-  <h2 id="tools">Tools</h2>
+  <h2 class="page-header" id="tools">Tools</h2>
   <ul>
     <li><a href="http://www.paciellogroup.com/resources/contrast-analyser.html" rel="external">Contrast Analyser for Windows and Mac</a></li>
     <li><a href="http://juicystudio.com/services/luminositycontrastratio.php" rel="external">Juicy Studios Luminosity Analyzer</a> </li>
