--- a/new/design/alignment-en.html
+++ b/new/design/alignment-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -33,15 +35,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="floats-en.html" class="list-group-item">Floats<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>Easily realign text to components with text alignment classes.</p>
-  <h2 id="options">Alignment options</h2>
+  <h2 class="page-header" id="options">Alignment options</h2>
   <p>Easily realign text to components with text alignment classes.</p>
   <p class="text-left">Left aligned text.</p>
   <p class="text-center">Center aligned text.</p>
@@ -62,7 +64,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="centre">Centre content blocks </h2>
+  <h2 class="page-header" id="centre">Centre content blocks </h2>
   <p>Set an element to <code>display: block</code> and center via <code>margin</code>.</p>
   <img src="http://placehold.it/140x140" class="img-rounded center-block" alt="A generic square placeholder image with rounded corners">
   <pre class="mrgn-tp-lg"><code>&lt;img class=&quot;center-block&quot; class=&quot;img-rounded center-block&quot; alt=&quot;...&quot; src=&quot;x.jpg&quot; /&gt;</code></pre>
