--- a/new/design/blockquotes-en.html
+++ b/new/design/blockquotes-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -33,21 +35,21 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Writing guide</h2>
+          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
         </div>
         <div class="list-group"><a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide</h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/quotations-en.html" class="list-group-item">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>For quoting blocks of content from another source within your document.</p>
-      <h2 id="options">Blockquote options</h2>
+      <h2 class="page-header" id="options">Blockquote options</h2>
       <p>Wrap <code>&lt;blockquote&gt;</code> around any <abbr title="HyperText Markup Language">HTML</abbr> as the quote. For straight quotes, we recommend a <code>&lt;p&gt;</code>.</p>
       <blockquote>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
