--- a/new/design/colour-en.html
+++ b/new/design/colour-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -36,23 +38,23 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts <span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide </h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
-      <h2 id="default">Default appearance</h2>
+      <h2 class="page-header" id="default">Default appearance</h2>
       <p>(Info goes here) </p>
-      <h2 id="text">Coloured text</h2>
+      <h2 class="page-header" id="text">Coloured text</h2>
       <p>Use font colours to highlight content and / or create information blocks that focus the user's attention.</p>
       <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
       <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -83,13 +85,13 @@
           <p>(Info goes here)</p>
         </div>
       </div>
-      <h2 id="message">Coloured message boxes</h2>
+      <h2 class="page-header" id="message">Coloured message boxes</h2>
       <p>For message colour options, refer to:</p>
       <ul>
         <li> <a href="panels-en.html#colour">Panels: Add colour</a></li>
         <li> <a href="alerts-en.html#options">Alerts: Alert options</a></li>
       </ul>
-      <h2 id="tables">Coloured tables</h2>
+      <h2 class="page-header" id="tables">Coloured tables</h2>
       <p>For table colour options, refer to <a href="tables-en.html#tables-contextual-classes">Tables: Coloured cells</a></p>
       <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
     </div>
