--- a/new/design/floats-en.html
+++ b/new/design/floats-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,15 +36,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alignment-en.html" class="list-group-item">Alignment<span class="wb-inv"> - Design guide</span></a> <a href="grids-en.html#reflow" class="list-group-item">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>(Info goes here) </p>
-  <h2 id="options">Float options</h2>
+  <h2 class="page-header" id="options">Float options</h2>
   <p>Float an element to the left or right with a class. </p>
   <div class="mrgn-tp-lg">
     <pre><code>&lt;div class=&quot;pull-left&quot;&gt;...&lt;/div&gt;
@@ -83,7 +85,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="clearing">Clearing floats</h2>
+  <h2 class="page-header" id="clearing">Clearing floats</h2>
   <p>Clear the <code>float </code>on any element with the <code>.clearfix</code> class. </p>
   <div class="mrgn-tp-lg">
     <pre><code>&lt;div class=&quot;clearfix&quot;&gt;...&lt;/div&gt;</code></pre>
