--- a/new/design/grids-en.html
+++ b/new/design/grids-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -41,14 +43,14 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="position-en.html" class="list-group-item">Absolute positioning<span class="wb-inv"> - Design guide</span></a> <a href="proximity-en.html" class="list-group-item">Margin proximity<span class="wb-inv"> - Design guide</span></a> <a href="floats-en.html" class="list-group-item">Floats<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
   <p>Bootstrap includes a responsive, mobile first fluid grid system that appropriately scales up to 12 columns as the device or viewport size increases.</p>
-  <h2 id="intro">Introduction</h2>
+  <h2 class="page-header" id="intro">Introduction</h2>
   <p>Grid systems are used for creating page layouts through a series of rows and columns that house your content. Here's how the Bootstrap grid system works:</p>
   <ul>
     <li>Rows must be placed within a <code>.container</code> for proper alignment and padding.</li>
@@ -73,7 +75,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="options">Grid options</h2>
+  <h2 class="page-header" id="options">Grid options</h2>
   <p>See how aspects of the Bootstrap grid system work across multiple devices with a handy table.</p>
   <div class="table-responsive">
     <table class="table table-bordered table-striped">
@@ -149,7 +151,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="example-basic">Stacked-to-horizontal</h2>
+  <h2 class="page-header" id="example-basic">Stacked-to-horizontal</h2>
   <p>Using a single set of <code>.col-md-*</code> grid classes, you can create a basic grid system that starts out stacked on mobile devices and tablet devices (the extra small to small range) before becoming horizontal on desktop (medium) devices. Place grid columns in any <code>.row</code>.</p>
   <div class="text-center">
     <div class="row">
@@ -258,7 +260,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="example-mixed">Mobile and desktop</h2>
+  <h2 class="page-header" id="example-mixed">Mobile and desktop</h2>
   <p>Don't want your columns to simply stack in smaller devices? Use the extra small and medium device grid classes by adding <code>.col-xs-*</code> <code>.col-md-*</code> to your columns. See the example below for a better idea of how it all works.</p>
   <div class="text-center">
     <div class="row">
@@ -320,7 +322,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="example-mixed-complete">Mobile, tablet, desktops</h2>
+  <h2 class="page-header" id="example-mixed-complete">Mobile, tablet, desktops</h2>
   <p>Build on the previous example by creating even more dynamic and powerful layouts with tablet <code>.col-sm-*</code> classes.</p>
   <div class="text-center">
     <div class="row">
@@ -369,7 +371,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="responsive-resets">Responsive column resets</h2>
+  <h2 class="page-header" id="responsive-resets">Responsive column resets</h2>
   <p>With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a <code>.clearfix</code> and our <a href="visible-en.html">invisible and visible classes</a>.</p>
   <div class="text-center">
     <div class="row">
@@ -423,7 +425,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="offsetting">Offsetting columns</h2>
+  <h2 class="page-header" id="offsetting">Offsetting columns</h2>
   <p>Move columns to the right using <code>.col-md-offset-*</code> classes. These classes increase the left margin of a column by <code>*</code> columns. For example, <code>.col-md-offset-4</code> moves <code>.col-md-4</code> over four columns.</p>
   <div class="text-center">
     <div class="row">
@@ -473,7 +475,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="nesting">Nesting columns</h2>
+  <h2 class="page-header" id="nesting">Nesting columns</h2>
   <p>To nest your content with the default grid, add a new <code>.row</code> and set of <code>.col-md-*</code> columns within an existing <code>.col-md-*</code> column. Nested rows should include a set of columns that add up to 12.</p>
   <div class="row">
     <div class="col-md-9">
@@ -515,7 +517,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="column-ordering">Column ordering</h2>
+  <h2 class="page-header" id="column-ordering">Column ordering</h2>
   <p>Easily change the order of our built-in grid columns with <code>.col-md-push-*</code> and <code>.col-md-pull-*</code> modifier classes.</p>
   <div class="row">
     <div class="col-md-9 col-md-push-3">
@@ -532,7 +534,7 @@
 &lt;/div&gt;
 </code></pre>
   </div>
-  <h2 id="reflow"> Reflowing content around grids</h2>
+  <h2 class="page-header" id="reflow"> Reflowing content around grids</h2>
   <p>Grids create boxes of content, which is typically the desired result.  However, there are times when content needs to reflow around the grids.  The <code>mrgn-*-md</code> creates margin of 15px and it mimics the same gutter on a grid. This is important to understand when mixing grids and non-grids in the same row.  In order for the content will reflow around the grid cell, yet have the gutters match, you must apply both the <code>mrgn-lft-md</code> and <code>mrgn-rght-md</code> to the non-grid content. Also refer to: <a href="proximity-en.html">Margin proximity</a> and <a href="floats-en.html">Floats</a></p>
   <div class="row">
     <div class="col-md-6 brdr-rght">
