--- a/new/design/keyboard-en.html
+++ b/new/design/keyboard-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -33,15 +35,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide</h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>Keyboard keys are represented by the &lt;kbd&gt; element.</p>
-  <h2 id="options">Code options</h2>
+  <h2 class="page-header" id="options">Code options</h2>
   <p>Press <kbd>Shift</kbd></p>
   <p>Press <kbd><abbr title="Control">Ctrl</abbr></kbd></p>
   <p>Press <kbd>Enter</kbd></p>
