--- a/new/design/links-en.html
+++ b/new/design/links-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,34 +36,34 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="listgroup-en.html" class="list-group-item">List groups<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide</h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/links-en.html" class="list-group-item">Links <span class="wb-inv">- Accessibility guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Writing guide</h2>
+          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
         </div>
         <div class="list-group"><a href="../writing/principals-en.html#links" class="list-group-item">Link principals<span class="wb-inv"> - Writing guide</span></a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>A link is a type of <a href="http://wet-boew.github.io/wet-boew/demos/opt-cont/kb-cv-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
       <ul>
         <li>Takes the user to another web page; or </li>
         <li>Jumps to another location within the same web page; or</li>
         <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
       </ul>
-      <h2 id="default">Default appearance</h2>
+      <h2 class="page-header" id="default">Default appearance</h2>
       <p>The default appearance of a link is this: <a href="#" >Demo link</a></p>
-      <h2 id="options">Options</h2>
+      <h2 class="page-header" id="options">Options</h2>
       <p>To modify overrid the default appearance of a link, refer to:</p>
       <ul>
         <li> <a href="alerts-en.html#links">Alerts: Alert links</a></li>
