--- a/new/design/listgroup-en.html
+++ b/new/design/listgroup-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -36,15 +38,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>List groups are a flexible and powerful component for displaying not only simple lists of elements, but complex ones with custom content.</p>
-  <h2 id="example">Basic example</h2>
+  <h2 class="page-header" id="example">Basic example</h2>
   <p>The most basic list group is simply an unordered list with list items, and the proper classes. Build upon it with the options that follow, or your own CSS as needed.</p>
   <ul class="list-group">
     <li class="list-group-item">Cras justo odio</li>
@@ -73,7 +75,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="badges">Add badges</h2>
+  <h2 class="page-header" id="badges">Add badges</h2>
   <p>Add the badges component to any list group item and it will automatically be positioned on the right.</p>
   <ul class="list-group">
     <li class="list-group-item"> <span class="badge">14</span> Cras justo odio </li>
@@ -99,7 +101,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="links">Add links</h2>
+  <h2 class="page-header" id="links">Add links</h2>
   <p>Linkify list group items by using anchor tags instead of list items (that also means a parent <code>&lt;div&gt;</code> instead of an <code>&lt;ul&gt;</code>). No need for individual parents around each element.</p>
   <div class="list-group"><a href="#" class="list-group-item active"> Cras justo odio </a> <a href="#" class="list-group-item">Dapibus ac facilisis in</a> <a href="#" class="list-group-item">Morbi leo risus</a> <a href="#" class="list-group-item">Porta ac consectetur ac</a> <a href="#" class="list-group-item">Vestibulum at eros</a></div>
   <div class="mrgn-tp-lg">
@@ -124,7 +126,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="custom">Add custom content</h2>
+  <h2 class="page-header" id="custom">Add custom content</h2>
   <p>Add nearly any HTML within, even for linked list groups like the one below.</p>
   <div class="list-group"><a href="#" class="list-group-item active">
     <h4 class="list-group-item-heading">List group item heading</h4>
