--- a/new/design/opacity-en.html
+++ b/new/design/opacity-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,15 +36,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="position-en.html" class="list-group-item">Absolute positioning<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>Adjust the opacity of any element.</p>
-  <h2 id="options">Opacity options</h2>
+  <h2 class="page-header" id="options">Opacity options</h2>
   <table class="table">
     <thead>
       <tr>
@@ -125,7 +127,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="examples">Opacity examples</h2>
+  <h2 class="page-header" id="examples">Opacity examples</h2>
   <div class="row">
     <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
       <div class="row">
