--- a/new/design/options-en.html
+++ b/new/design/options-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -12,10 +14,9 @@
   <li><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET </a></li>
   <li><a href="../index-en.html">Style guide</a></li>
   <li><a href="index-en.html">Design guide</a></li>
-  <li>Snapshot of design features</li>
-  <li></li>
+  <li>Demo of all design features</li>
 </ol>
-<h1>Snapshot of design features <small>Design guide</small></h1>
+<h1>Demo of all design features <small>Design guide</small></h1>
 <div class="row">
   <div class="col-md-6">
     <section id="typography" class="panel panel-default">
@@ -23,6 +24,7 @@
         <h2 class="panel-title">Headings</h2>
       </div>
       <div class="panel-body">
+	    <h1 class="page-header mrgn-tp-0">h1 heading with underline</h1>
         <h1 class="mrgn-tp-0">h1 heading <small>With Small Text</small></h1>
         <h1>h1 heading</h1>
         <h2>h2 heading</h2>
@@ -62,9 +64,6 @@
         <p class="text-danger">Danger color paragraph.</p>
         <p class="text-info">Info color paragraph.</p>
         <p class="text-success">Success color paragraph.</p>
-        <p>
-          <mark>This is text in a &lt;mark&gt; wrapper.</mark>
-        </p>
         <p><kbd>This is text in a &lt;kbd&gt; keyboard wrapper </kbd></p>
         <p><code>This is text in a &lt;code&gt; wrapper </code></p>
         <p><small>This is text in a <code>&lt;small&gt;</code> wrapper.</p>
@@ -830,7 +829,7 @@
             <div class="col-md-10">
               <input type="password" class="form-control" id="inputPassword" placeholder="Password">
               <div>
-                <label class="checkbox checkbox-custom"> <i></i>
+                <label class="checkbox checkbox-custom"> <span ></span>
                 <input type="checkbox">
                 Remember me</label>
               </div>
@@ -1073,25 +1072,25 @@
         </div>
         <label class="checkbox checkbox-custom">
         <input type="checkbox" checked="checked">
-        <i></i>Check me out</label>
+        <span ></span>Check me out</label>
         <label class="checkbox checkbox-custom">
         <input type="checkbox" id="chk1">
-        <i></i>Unchecked Enabled</label>
+        <span ></span>Unchecked Enabled</label>
         <label class="checkbox checkbox-custom">
         <input type="checkbox" checked="checked" disabled="disabled">
-        <i></i>Checked Disabled</label>
+        <span ></span>Checked Disabled</label>
         <label class="checkbox checkbox-custom">
         <input type="checkbox" disabled="disabled">
-        <i></i>Unchecked Disabled</label>
+        <span ></span>Unchecked Disabled</label>
         <label class="radio radio-custom">
         <input type="radio" name="radio1a" id="radio1">
-        <i></i>Custom: Unchecked Enabled</label>
+        <span ></span>Custom: Unchecked Enabled</label>
         <label class="radio radio-custom">
         <input type="radio" name="radio1b" checked="checked" disabled="disabled">
-        <i></i>Custom: Checked Disabled</label>
+        <span ></span>Custom: Checked Disabled</label>
         <label class="radio radio-custom">
         <input type="radio" name="radio1c" disabled="disabled">
-        <i></i>Custom: Unchecked Disabled</label>
+        <span ></span>Custom: Unchecked Disabled</label>
       </div>
     </div>
     <hr>
