--- a/new/design/pagination-en.html
+++ b/new/design/pagination-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -36,15 +38,15 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>(Info goes here)</p>
-  <h2 id="default">Default pagination</h2>
+  <h2 class="page-header" id="default">Default pagination</h2>
   <p>Simple pagination inspired by Rdio, great for apps and search results. The large block is hard to miss, easily scalable, and provides large click areas.</p>
   <ul class="pagination">
     <li><a href="#">&laquo;</a></li>
@@ -77,7 +79,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="disabled">Disabled and active states</h2>
+  <h2 class="page-header" id="disabled">Disabled and active states</h2>
   <p>Links are customizable for different circumstances. Use <code>.disabled</code> for unclickable links and <code>.active</code> to indicate the current page.</p>
   <ul class="pagination">
     <li class="disabled"><a href="#">&laquo;</a></li>
@@ -115,7 +117,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="sizing">Sizing</h2>
+  <h2 class="page-header" id="sizing">Sizing</h2>
   <p>Fancy larger or smaller pagination? Add <code>.pagination-lg</code> or <code>.pagination-sm</code> for additional sizes.</p>
   <ul class="pagination pagination-lg">
     <li><a href="#">&laquo;</a></li>
@@ -160,7 +162,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="pager">Simple pager</h2>
+  <h2 class="page-header" id="pager">Simple pager</h2>
   <p>Quick previous and next links for simple pagination implementations with light markup and styles. It's great for simple sites like blogs or magazines.</p>
   <h3>Default example</h3>
   <p>By default, the pager centers links.</p>
