--- a/new/design/panels-en.html
+++ b/new/design/panels-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -38,17 +40,17 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview<span class="wb-inv"> - Design guide</span> </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span> </a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay<span class="wb-inv"> - Design guide</span> </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout<span class="wb-inv"> - Design guide</span> </a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="basic">Basic panel</h2>
+  <h2 class="page-header" id="basic">Basic panel</h2>
   <p>By default, all the <code>.panel</code> does is apply some basic border and padding to contain some content.</p>
   <div class="panel panel-default">
     <div class="panel-body"> Basic panel example </div>
@@ -71,7 +73,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="heading">Add a heading</h2>
+  <h2 class="page-header" id="heading">Add a heading</h2>
   <p>Easily add a heading container to your panel with <code>.panel-heading</code>. You may also include any <code>&lt;h1&gt;</code>-<code>&lt;h6&gt;</code> with a <code>.panel-title</code> class to add a pre-styled heading.</p>
   <div class="panel panel-default">
     <div class="panel-heading">Panel heading without title</div>
@@ -110,7 +112,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="footer">Add a footer</h2>
+  <h2 class="page-header" id="footer">Add a footer</h2>
   <p>Wrap buttons or secondary text in <code>.panel-footer</code>. Note that panel footers <strong>do not</strong> inherit colors and borders when using contextual variations as they are not meant to be in the foreground.</p>
   <div class="panel panel-default">
     <div class="panel-body"> Panel content </div>
@@ -135,7 +137,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="colour">Add colour</h2>
+  <h2 class="page-header" id="colour">Add colour</h2>
   <p>Easily make a panel more meaningful to a particular context by adding any of the contextual state classes.</p>
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -185,7 +187,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="full">Full width content</h2>
+  <h2 class="page-header" id="full">Full width content</h2>
   <p>Content inside the <code>panel-body</code> has a padding applied to it, creating white space.  To remove the padding and have content that is flush with the borders, do not use the <code>panel-body</code> code.</p>
   <div class="panel panel-default">
     <div class="panel-heading">Panel heading</div>
@@ -241,7 +243,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="mix">Mix padded content with full width content</h2>
+  <h2 class="page-header" id="mix">Mix padded content with full width content</h2>
   <p>Mix content that is inside the <code>panel-body</code> with content that is outside the <code>panel-body</code>.</p>
   <div class="panel panel-default">
     <div class="panel-heading">Panel heading</div>
