--- a/new/design/pills-en.html
+++ b/new/design/pills-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -37,21 +39,21 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Writing guide </h2>
+          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
         </div>
         <div class="list-group"><a class="list-group-item" href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a> <a class="list-group-item" href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>(Info goes here)</p>
-      <h2 id="default">Default pills</h2>
+      <h2 class="page-header" id="default">Default pills</h2>
       <ul class="nav nav-pills">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Profile</a></li>
@@ -77,7 +79,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="vertical">Vertical pills</h2>
+  <h2 class="page-header" id="vertical">Vertical pills</h2>
   <p>Pills are also vertically stackable. Just add <code>.nav-stacked</code>.</p>
   <ul class="nav nav-pills nav-stacked">
     <li class="active"><a href="#">Home</a></li>
@@ -100,7 +102,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="justified">Justified pills</h2>
+  <h2 class="page-header" id="justified">Justified pills</h2>
   <p>Easily make tabs or pills equal widths of their parent at screens wider than 768px with <code>.nav-justified</code>. On smaller screens, the nav links are stacked.</p>
   <ul class="nav nav-pills nav-justified">
     <li class="active"><a href="#">Home</a></li>
@@ -123,7 +125,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="disabled">Disabled links</h2>
+  <h2 class="page-header" id="disabled">Disabled links</h2>
   <p>Add <code>.disabled</code> for <strong>gray links and no hover effects</strong>.</p>
   <div class="alert alert-warning">
     <h4>Link functionality not impacted</h4>
@@ -152,7 +154,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="dropdowns">Pills with dropdowns</h2>
+  <h2 class="page-header" id="dropdowns">Pills with dropdowns</h2>
   <p>Add dropdown menus to the pills.</p>
   <ul class="nav nav-pills">
     <li class="active"><a href="#">Home</a></li>
