--- a/new/design/proximity-en.html
+++ b/new/design/proximity-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -37,15 +39,15 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="position-en.html" class="list-group-item">Absolute positioning<span class="wb-inv"> - Design guide </span></a> <a href="grids-en.html#reflow" class="list-group-item">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>Increase of decrease the proxmity of one object to another by using these classes.  Additionally these classes allow grid and non-grid content to exist in the same row.</p>
-      <h2 id="options">Options</h2>
+      <h2 class="page-header" id="options">Options</h2>
       <table class="table table-bordered">
         <tr>
           <th scope="col">Top margin </th>
