--- a/new/design/sizing-en.html
+++ b/new/design/sizing-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,20 +36,20 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a> <a href="wells-en.html" class="list-group-item">Wells<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>(Info goes here) </p>
-      <h2 id="default">Default sizing </h2>
+      <h2 class="page-header" id="default">Default sizing </h2>
       <p>Bootstrap's global default <code>font-size</code> is <strong>14px</strong>, with a <code>line-height</code> of <strong>1.428</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of half their computed line-height (10px by default).</p>
       <div class="mrgn-tp-lg">
         <pre><code>&lt;p&gt;...&lt;/p&gt;</code></pre>
       </div>
-      <h2 id="text">Text text size </h2>
+      <h2 class="page-header" id="text">Text text size </h2>
       <p>Increase or decrease the size of text.</p>
       <table class="table">
         <thead>
