--- a/new/design/tables-en.html
+++ b/new/design/tables-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -39,7 +41,7 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in<span class="wb-inv"> - Design guide</span></a></div>
       </div>
@@ -51,15 +53,15 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Writing guide</h2>
+          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
         </div>
         <div class="list-group"><a href="../writing/principals-en.html#tables" class="list-group-item">Tables<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>(Info goes here)</p>
-      <h2 id="default">Default appearance</h2>
+      <h2 class="page-header" id="default">Default appearance</h2>
       <p>For basic styling&mdash;light padding and only horizontal dividers&mdash;add the base class <code>.table</code> to any <code>&lt;table&gt;</code>. It may seem super redundant, but given the widespread use of tables for other plugins like calendars and date pickers, we've opted to isolate our custom table styles.</p>
       <table class="table">
         <thead>
@@ -109,7 +111,7 @@
       </div>
     </div>
   </div>
-  <h2 id="tables-striped">Striped rows</h2>
+  <h2 class="page-header" id="tables-striped">Striped rows</h2>
   <p>Use <code>.table-striped</code> to add zebra-striping to any table row within the <code>&lt;tbody&gt;</code>.</p>
   <div class="alert alert-danger">
     <h4>Cross-browser compatibility</h4>
@@ -161,7 +163,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="tables-bordered">Bordered table</h2>
+  <h2 class="page-header" id="tables-bordered">Bordered table</h2>
   <p>Add <code>.table-bordered</code> for borders on all sides of the table and cells.</p>
   <table class="table table-bordered">
     <thead>
@@ -213,7 +215,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="tables-hover-rows">Hover rows</h2>
+  <h2 class="page-header" id="tables-hover-rows">Hover rows</h2>
   <p>Add <code>.table-hover</code> to enable a hover state on table rows within a <code>&lt;tbody&gt;</code>.</p>
   <table class="table table-hover">
     <thead>
@@ -260,7 +262,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="tables-condensed">Condensed table</h2>
+  <h2 class="page-header" id="tables-condensed">Condensed table</h2>
   <p>Add <code>.table-condensed</code> to make tables more compact by cutting cell padding in half.</p>
   <table class="table table-condensed">
     <thead>
@@ -307,7 +309,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="tables-contextual-classes">Coloured cells</h2>
+  <h2 class="page-header" id="tables-contextual-classes">Coloured cells</h2>
   <p>Use contextual classes to color table rows or individual cells.</p>
   <div class="table-responsive">
     <table class="table table-bordered table-striped">
@@ -420,7 +422,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="tables-responsive">Responsive tables</h2>
+  <h2 class="page-header" id="tables-responsive">Responsive tables</h2>
   <p>Create responsive tables by wrapping any <code>.table</code> in <code>.table-responsive</code> to make them scroll horizontally up to small devices (under 768px). When viewing on anything larger than 768px wide, you will not see any difference in these tables.</p>
   <div class="table-responsive">
     <table class="table">
