--- a/new/writing/index-en.html
+++ b/new/writing/index-en.html
@@ -5,6 +5,22 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
+<style type="text/css">
+blockquote p {font-size:16px;}
+</style>
+<style type="text/css">
+
+.clmn-2-sm {
+	padding-left: 1.1em;
+	list-style: outside;
+}
+.clmn-2-sm li {
+    margin-left: 1.1em;
+}
+
+</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -17,23 +33,33 @@
 <div class="row">
   <div class="col-md-8">
     <div class="row">
-      <div class="col-md-4"> <img src="../writing.jpg" alt=""  class="media-object img-responsive img-thumbnail mrgn-bttm-lg" /> </div>
-      <div class="col-md-8">
-        <p>The writing guide provides the principals needed to ensure content is well formatted for the web and that it adheres to specific technical writing requirements.</p>
+      <div class="col-md-4 col-lg-3 visible-md visible-lg "><span class="fa-stack fa-5x"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-font fa-stack-1x fa-inverse"></span></span> </div>
+      <div class="col-md-8 col-lg-9">
+        <p>The writing guide provides:</p>
+        <ul>
+          <li>The principals every content creator must know before writing content made for the Web.</li>
+          <li>The writing standards that ensure content adheres to specific technical writing requirements.</li>
+        </ul>
       </div>
     </div>
-    <ul class="clmn-2-sm list-unstyled">
-      <li><a href="principals-en.html">Content creation principals</a>
-        <ul>
-          <li><a href="principals-en.html#print">Print versus Web</a></li>
-          <li><a href="principals-en.html#development">Content development </a> </li>
-          <li><a href="principals-en.html#architecture">Content architecture </a> </li>
-          <li><a href="principals-en.html#style">Content style and flow </a> </li>
-          <li><a href="principals-en.html#content">Content structure</a> </li>
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>Create content</h2>
+        <ul class="list-unstyled">
+          <li><a href="principals-en.html">Content creation principals</a>
+            <ul>
+              <li><a href="principals-en.html#print">Print versus Web</a></li>
+              <li><a href="principals-en.html#development">Content development </a> </li>
+              <li><a href="principals-en.html#architecture">Content architecture </a> </li>
+              <li><a href="principals-en.html#style">Content style and flow </a> </li>
+              <li><a href="principals-en.html#content">Content structure</a> </li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li><a href="formatting-en.html">Content formatting</a>
-        <ul>
+      </div>
+      <div class="col-sm-8">
+        <h2>Format content</h2>
+        <ul class="clmn-2-sm list-unstyled">
           <li><a href="formatting-en.html#acronyms">Acronyms and initialisms</a></li>
           <li><a href="formatting-en.html#addresses">Addresses</a></li>
           <li><a href="formatting-en.html#blockquotes">Blockquotes</a></li>
@@ -71,11 +97,20 @@
           <li><a href="formatting-en.html#website">Website and webpage references</a></li>
           <li><a href="formatting-en.html#resources">External resources</a></li>
         </ul>
-      </li>
-    </ul>
+      </div>
+    </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"> Design guide </a> <a href="index-en.html" class="list-group-item active">Writing guide</a> <a href="../usability/index-en.html" class="list-group-item">Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a></div>
+    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-code text-muted"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item active"><span class="fa fa-font fa-inversed"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
+    <blockquote>
+      <p>On the average Web page, users have time to read at most 28% of the words during an average visit; 20% is more likely.</p>
+      <p class="text-right">-Nielsen Norman Group<br>
+        <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/">How Users Read on the Web</a></p>
+    </blockquote>
+    <blockquote>
+      <p>I try to leave out the parts that people skip.</p>
+      <p class="text-right">-Elmore Leonard, author</p>
+    </blockquote>
   </div>
 </div>
 </body>
