--- a/new/writing/principals-en.html
+++ b/new/writing/principals-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 <style type="text/css">
 blockquote p {font-size:16px;}
 </style>
@@ -66,7 +68,7 @@ blockquote p {font-size:16px;}
     </li>
   </ul>
 </div>
-<h2 id="print">Print versus Web</h2>
+<h2 class="page-header" id="print">Print versus Web</h2>
 <div class="row">
   <div class="pull-right col-md-4">
     <div class="alert alert-success">
@@ -95,7 +97,7 @@ blockquote p {font-size:16px;}
   <p class="text-right">-Nielsen Norman Group<br>
     <a href="http://www.nngroup.com/articles/writing-style-for-print-vs-web/">Writing Style for Print vs. Web</a></p>
 </blockquote>
-<h2 id="development">Content development</h2>
+<h2 class="page-header" id="development">Content development</h2>
 <p>Developing content is the process of identifying the information that serves your users' needs and meets your organizational goals. The process involves defining your users, identifying their tasks, and identifying the information they require to complete their tasks, while ensuring that the content also meets your organizational goals.</p>
 <h3 id="users">Who are your users?</h3>
 <div class="row">
@@ -165,7 +167,7 @@ blockquote p {font-size:16px;}
     <p>As well as benefiting users, the Web site needs to serve your organization's goals. To ensure that the content balances your business needs and your users' needs, define your goals for the site and decide how the content will meet those goals.</p>
   </div>
 </div>
-<h2 id="architecture">Content architecture</h2>
+<h2 class="page-header" id="architecture">Content architecture</h2>
 <p>Content architecture is how the tasks and information about those tasks are organized, whether on one Web page or spread over dozens of pages. Organizing your content involves categorizing and arranging the tasks and information to suit your users' needs and expectations. A good content architecture will help users quickly find what they are looking for.</p>
 <h3 id="organize">Organize your content</h3>
 <div class="row">
@@ -280,7 +282,7 @@ blockquote p {font-size:16px;}
   <p class="text-right">-UX Myths<br>
     <a href="http://uxmyths.com/post/654047943/myth-people-dont-scroll">Myth #3: People don't scroll</a></p>
 </blockquote>
-<h2 id="style">Content style and flow</h2>
+<h2 class="page-header" id="style">Content style and flow</h2>
 <p>Users tend to scan Web pages when looking for information and typically read only 20% of the text. By using short, concise text that is easy to read and is focused on your users' tasks you will help them quickly find and use the information they need.</p>
 <h3 id="plain">Use plain language</h3>
 <div class="row">
@@ -523,7 +525,7 @@ blockquote p {font-size:16px;}
       <p class="text-right">-University of Washington<br>
         <a href="http://courses.washington.edu/art479/media/universal_principles1.pdf"> Aesthetic-Usability Effect (PDF, 1.4 MB)</a></p>
     </blockquote>
-    <h2 id="content">Content structure</h2>
+    <h2 class="page-header" id="content">Content structure</h2>
     <p>You can organize your content by audience, topic, or task, whichever best suits your users. But remember that each user is there to complete a task, so your categories should always lead to a task. However you organize your content, you need to keep the structure simple, logical, and consistent so users can quickly become familiar with it and be able to easily navigate through it.</p>
   </div>
 </div>
@@ -541,18 +543,18 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Design guide</h2>
+        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Design guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Accessibility guide</h2>
+        <h3 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
       </div>
       <div class="list-group"><a href="../accessibility/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Accessibility guide</span> </a></div>
     </div>
   </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
+  <div class="col-md-8">
     <p>The first thing users see on a Web page is the title, so the title must instantly convey the type of information the page contains. The page title must also be unique so users will not confuse one page with another.</p>
     <p>Headings should be clear and descriptive to help guide users to the information they are looking for. Including keywords in headings, particularly in the first two words, helps users scan more easily. Subheadings make large blocks of text easier to read and scan. Be sure that subheadings are also clear and concise, and it helps if they are written using <a href="#parallel">parallel structure</a>.</p>
     <p>Not only is it a good writing practice to use sub-headings in longer documents, but when information is on the Web, sub-headings improve usability and readability as well.</p>
@@ -602,18 +604,18 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Writing guide</h2>
+        <h3 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h3>
       </div>
       <div class="list-group"><a href="../writing/formatting-en.html#lists" class="list-group-item">List formatting<span class="wb-inv"> - Writing guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Design guide</h2>
+        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/lists-en.html" class="list-group-item">Lists<span class="wb-inv"> - Design guide</span></a> <a href="../design/listgroup-en.html" class="list-group-item">List group<span class="wb-inv"> - Design guide</span></a> <a href="../design/pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
     </div>
   </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
+  <div class="col-md-8">
     <p>Lists are easier to scan than paragraphs, so, where appropriate, use lists instead of paragraphs. However, sub-lists can be confusing and sometimes difficult to scan, so avoid them as much as you can. Each list should have a descriptive and unique heading or an introductory sentence or paragraph to provide some context.</p>
     <p>Arrange the items of a list in a logical or sequential order, or by priority, importance, or popularity. If you are listing a series of items where the order is important, you should use numbers rather than bullets. Furthermore, list items with <a href="#parallel">parallel structure</a> to help users scan lists more quickly.</p>
     <p>You should generally not alphabetize lists because the user may not be sure which letter their desired information would fall under. Alphabetize lists when the information has a stable naming convention, like people's names or place names.</p>
@@ -634,24 +636,24 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Writing guide</h2>
+        <h3 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h3>
       </div>
       <div class="list-group"><a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting<span class="wb-inv"> - Writing guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Design guide</h2>
+        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Design guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Accessibility guide</h2>
+        <h3 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
       </div>
       <div class="list-group"><a href="../accessibility/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Accessibility guide</span></a></div>
     </div>
   </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
+  <div class="col-md-8">
     <p>Hyperlinks are used to guide users to the information they are looking for. They can also be used to avoid repeating information that is already clearly expressed on another Web page or to reference related information, such as definitions, supporting information, and background information.</p>
     <p>Use the title of the target page as the text in the hyperlink; it's very confusing to users if the link text and page name don't match. However, sometimes you will need to modify the text; in those cases, attempt to match the text as closely as possible. If you refer to another Web page more than once, only add a hyperlink to the first reference. Also, avoid putting too many hyperlinks in any one paragraph because they can be confusing if they are too close together; users may not be able to tell where one hyperlink ends and the next one begins.</p>
     <p>You may be tempted to add a hyperlink to any reference, but you should only add a hyperlink to references that will help users complete their task or that provide valuable information about the task. You should not add a hyperlink to unnecessary or unrelated information because too much blue, underlined text is distracting. It becomes difficult for users to distinguish between important and unimportant hyperlinks. Finally, ensure that the hyperlinks direct users to the right page. Refer to the <a href="#scent">Scent of information</a> for more on hyperlinks.</p>
@@ -670,18 +672,18 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Design guide</h2>
+        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="../design/icons-en.html" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Accessibility guide</h2>
+        <h3 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
       </div>
       <div class="list-group"><a href="../accessibility/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Accessibility guide</span></a> </div>
     </div>
   </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
+  <div class="col-md-8">
     <p>You should only add an image if it supports the information users looking for by aiding navigation or comprehension. Otherwise, the image is just in the way as users search for relevant information, or it is something they will ignore entirely. If you use an image, make sure it is professional-looking and modern and not blurry or pixelated&mdash;choose your images wisely.</p>
     <blockquote class="mrgn-bttm-lg">
       <p>Users pay close attention to photos and other images that contain   relevant information but ignore fluffy pictures used to "jazz up" Web   pages.</p>
@@ -712,18 +714,18 @@ blockquote p {font-size:16px;}
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Design guide</h3>
+        <h3 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide</h3>
       </div>
       <div class="list-group"><a href="../design/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in<span class="wb-inv"> - Design guide</span></a></div>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Accessibility guide</h3>
+        <h3 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
       </div>
       <div class="list-group"><a href="../accessibility/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Accessibility guide</span></a></div>
     </div>
   </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
+  <div class="col-md-8">
     <p>Tables can be an effective way of presenting information; however, they should only be used to display financial, statistical, comparative, or numerical information&mdash;not to serve stylistic purposes.</p>
     <p>Like text, tables should be clear and concise, with as few data elements as possible in each cell. If you need to include more than a few words in any cell, consider using another format.</p>
     <p>If there is not enough white space in each cell, data becomes difficult to read. Ensure that each row and column has a clear and concise heading; this allows screen readers to unambiguously convey the content of the tables. Consider using a visual cue such as an alternating colour scheme to distinguish each row from the next.</p>
