--- a/new/design/alerts-en.html
+++ b/new/design/alerts-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,15 +36,15 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="sizing-en.html" class="list-group-item">Sizing<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span></a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>Provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
-      <h2 id="options">Alert options</h2>
+      <h2 class="page-header" id="options">Alert options</h2>
       <p>Wrap any text and an optional dismiss button in <code>.alert</code> and one of the four contextual classes (e.g., <code>.alert-success</code>) for basic alert messages.</p>
       <p>Alerts don't have default classes, only base and modifier classes. A default gray alert doesn't make too much sense, so you're required to specify a type via contextual class. Choose from success, info, warning, or danger.</p>
       <div class="alert alert-success"> <strong>Well done!</strong> You successfully read this important alert message. </div>
@@ -68,7 +70,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="links">Links in alerts</h2>
+  <h2 class="page-header" id="links">Links in alerts</h2>
   <p>A link within an alert will default to the standard appearance. For example:</p>
   <div class="alert alert-success"> <strong>Well done!</strong> You successfully read <a href="#">this important alert message</a>. </div>
   <p>To override that appearance, use the <code>.alert-link</code> utility class to quickly provide matching colored links within any alert.</p>
