--- a/new/design/forms-en.html
+++ b/new/design/forms-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -40,23 +42,23 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html" class="list-group-item">Feedback form<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide</h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Accessibility guide</span></a> <a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>A form contains a set of form elements, which are a type <a href="../accessibility/keyboard-en.html">user control</a> that accepts user input.  Form elements are the foundation for nearly all web applications.</p>
     </div>
   </div>
-  <h2 id="example">Basic example</h2>
+  <h2 class="page-header" id="example">Basic example</h2>
   <p>Individual form controls automatically receive some global styling. All textual <code>&lt;input&gt;</code>, <code>&lt;textarea&gt;</code>, and <code>&lt;select&gt;</code> elements with <code>.form-control</code> are set to <code>width: 100%;</code> by default. Wrap labels and controls in <code>.form-group</code> for optimum spacing.</p>
   <form role="form">
     <div class="form-group">
@@ -124,7 +126,7 @@
       </div>
     </div>
   </div>
-  <h2 id="forms-inline">Inline form</h2>
+  <h2 class="page-header" id="forms-inline">Inline form</h2>
   <p>Add <code>.form-inline</code> for left-aligned and inline-block controls for a compact layout.</p>
   <div class="alert alert-danger">
     <h4>Requires custom widths</h4>
@@ -179,7 +181,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="forms-horizontal">Horizontal form</h2>
+  <h2 class="page-header" id="forms-horizontal">Horizontal form</h2>
   <p>Use Bootstrap's predefined grid classes to align labels and groups of form controls in a horizontal layout by adding <code>.form-horizontal</code> to the form. Doing so changes <code>.form-group</code>s to behave as grid rows, so no need for <code>.row</code>.</p>
   <form class="form-horizontal">
     <div class="form-group">
@@ -280,7 +282,7 @@
       </form>
     </div>
   </div>
-  <h2 id="forms-controls">Supported controls</h2>
+  <h2 class="page-header" id="forms-controls">Supported controls</h2>
   <p>Examples of standard form controls supported in an example form layout.</p>
   <h3>Inputs</h3>
   <p>Most common form control, text-based input fields. Includes support for all HTML5 types: <code>text</code>, <code>password</code>, <code>datetime</code>, <code>datetime-local</code>, <code>date</code>, <code>month</code>, <code>time</code>, <code>week</code>, <code>number</code>, <code>email</code>, <code>url</code>, <code>search</code>, <code>tel</code>, and <code>color</code>.</p>
@@ -462,7 +464,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="forms-controls-static">Static control</h2>
+  <h2 class="page-header" id="forms-controls-static">Static control</h2>
   <p>When you need to place plain text next to a form label within a horizontal form, use the <code>.form-control-static</code> class on a <code>&lt;p&gt;</code>.</p>
   <form class="form-horizontal" role="form">
     <div class="form-group">
@@ -505,7 +507,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="forms-control-states">Form states</h2>
+  <h2 class="page-header" id="forms-control-states">Form states</h2>
   <p>Provide feedback to users or visitors with basic feedback states on form controls and labels.</p>
   <h3 id="forms-input-focus">Input focus</h3>
   <p>We remove the default <code>outline</code> styles on some form controls and apply a <code>box-shadow</code> in its place for <code>:focus</code>.</p>
@@ -651,7 +653,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="forms-control-sizes">Control sizing</h2>
+  <h2 class="page-header" id="forms-control-sizes">Control sizing</h2>
   <p>Set heights using classes like <code>.input-lg</code>, and set widths using grid column classes like <code>.col-lg-*</code>.</p>
   <h3>Height sizing</h3>
   <p>Create larger or smaller form controls that match button sizes.</p>
@@ -729,7 +731,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="forms-help-text">Help text</h2>
+  <h2 class="page-header" id="forms-help-text">Help text</h2>
   <p>Block level help text for form controls.</p>
   <form role="form">
     <input type="text" class="form-control">
@@ -749,7 +751,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups">Input groups</h2>
+  <h2 class="page-header" id="input-groups">Input groups</h2>
   <p>Extend form controls by adding text or buttons before, after, or on both sides of any text-based input. Use <code>.input-group</code> with an <code>.input-group-addon</code> to prepend or append elements to a <code>.form-control</code>.</p>
   <div class="alert alert-danger">
     <h4>Cross-browser compatibility</h4>
@@ -763,7 +765,7 @@
     <h4>Don't mix with form groups</h4>
     <p>Do not apply input group classes directly to form groups. An input group is an isolated component.</p>
   </div>
-  <h2 id="input-groups-basic">Basic example</h2>
+  <h2 class="page-header" id="input-groups-basic">Basic example</h2>
   <form role="form">
     <div class="input-group"> <span class="input-group-addon">@</span>
       <input type="text" class="form-control" placeholder="Username">
@@ -803,7 +805,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups-sizing">Sizing</h2>
+  <h2 class="page-header" id="input-groups-sizing">Sizing</h2>
   <p>Add the relative form sizing classes to the <code>.input-group</code> itself and contents within will automatically resize-no need for repeating the form control size classes on each element.</p>
   <form role="form">
     <div class="input-group input-group-lg"> <span class="input-group-addon">@</span>
@@ -843,7 +845,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups-checkboxes-radios">Checkboxes and radio addons</h2>
+  <h2 class="page-header" id="input-groups-checkboxes-radios">Checkboxes and radio addons</h2>
   <p>Place any checkbox or radio option within an input group's addon instead of text.</p>
   <form>
     <div class="row">
@@ -899,7 +901,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups-buttons">Button addons</h2>
+  <h2 class="page-header" id="input-groups-buttons">Button addons</h2>
   <p>Buttons in input groups are a bit different and require one extra level of nesting. Instead of <code>.input-group-addon</code>, you'll need to use <code>.input-group-btn</code> to wrap the buttons. This is required due to default browser styles that cannot be overridden.</p>
   <form>
     <div class="row">
@@ -955,7 +957,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups-buttons-dropdowns">Buttons with dropdowns</h2>
+  <h2 class="page-header" id="input-groups-buttons-dropdowns">Buttons with dropdowns</h2>
   <p></p>
   <form role="form">
     <div class="row">
@@ -1043,7 +1045,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="input-groups-buttons-segmented">Segmented buttons</h2>
+  <h2 class="page-header" id="input-groups-buttons-segmented">Segmented buttons</h2>
   <form role="form">
     <div class="row">
       <div class="col-lg-6">
