--- a/new/design/headings-en.html
+++ b/new/design/headings-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -28,6 +30,7 @@
             <li><a href="#default">Default appearance </a></li>
             <li><a href="#sizes">Sizes</a></li>
             <li><a href="#secondary">Secondary text</a></li>
+            <li><a href="#underline">Underline</a></li>
             <li><a href="#colours">Colours</a></li>
           </ul>
         </div>
@@ -36,21 +39,21 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Accessibility guide</h2>
+          <h2 class="panel-title"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h2>
         </div>
         <div class="list-group"><a href="../accessibility/headings-en.html" class="list-group-item">Headings and page titles<span class="wb-inv"> - Accessibility guide </span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Writing guide</h2>
+          <h2 class="panel-title"><span class="fa fa-font text-muted"></span> Writing guide</h2>
         </div>
         <div class="list-group"><a href="../writing/principals-en.html#heading" class="list-group-item">Heading principals<span class="wb-inv"> - Writing guide</span></a> <a href="../writing/formatting-en.html#headings" class="list-group-item">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>A heading is a short text phrase which is the title for a section of content that immediately follows it. Headings are usually represented visually as enlarged bolded text and are often hierarchical in nature.</p>
-      <h2 id="default">Default appearance</h2>
+      <h2 class="page-header" id="default">Default appearance</h2>
       <p>All HTML headings, <code>&lt;h1&gt;</code> through <code>&lt;h6&gt;</code>, are available.</p>
       <h1>h1 heading</h1>
       <h2>h2 heading</h2>
@@ -78,7 +81,7 @@
         </div>
       </div>
     </div>
-    <h2 id="sizes">Sizes</h2>
+    <h2 class="page-header" id="sizes">Sizes</h2>
     <p><code>.h1</code> through <code>.h6</code> classes are available.</p>
     <h1 class="h2">h1 that is h2 size</h1>
     <h2 class="h3">h2 that is h3 size</h2>
@@ -104,7 +107,7 @@
         <p>(Info goes here)</p>
       </div>
     </div>
-    <h2 id="secondary">Secondary text</h2>
+    <h2 class="page-header" id="secondary">Secondary text</h2>
     <p>Create lighter, secondary text in any heading with a generic <code>&lt;small&gt;</code> tag or the <code>.small</code> class.</p>
     <h1>h1 heading <small>Secondary text</small></h1>
     <h2>h2 heading <small>Secondary text</small></h2>
@@ -131,7 +134,34 @@
         <p>(Info goes here)</p>
       </div>
     </div>
-    <h2 id="colours">Colours</h2>
+    <h2 class="page-header" id="underline">Underline</h2>
+    <p>Add an underline to a heading using the <code>page-header</code> class.</p>
+    <h1 class="page-header">h1 heading</h1>
+    <h2 class="page-header">h2 heading</h2>
+    <h3 class="page-header">h3 heading</h3>
+    <h4 class="page-header">h4 heading</h4>
+    <h5 class="page-header">h5 heading</h5>
+    <h6 class="page-header">h6 heading</h6>
+    <div class="mrgn-tp-lg">
+      <pre><code>&lt;h1 class=&quot;page-header&quot;&gt;h1 heading&lt;/h1&gt;
+&lt;h2 class=&quot;page-header&quot;&gt;h2 heading&lt;/h2&gt;
+&lt;h3 class=&quot;page-header&quot;&gt;h3 heading&lt;/h3&gt;
+&lt;h4 class=&quot;page-header&quot;&gt;h4 heading&lt;/h4&gt;
+&lt;h5 class=&quot;page-header&quot;&gt;h5 heading&lt;/h5&gt;
+&lt;h6 class=&quot;page-header&quot;&gt;h6 heading&lt;/h6&gt;
+</code></pre>
+    </div>
+    <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+      <div class="col-md-6">
+        <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+        <p>(Info goes here)</p>
+      </div>
+      <div class="col-md-6 brdr-lft">
+        <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+        <p>(Info goes here)</p>
+      </div>
+    </div>
+    <h2 class="page-header" id="colours">Colours</h2>
     <p>(Info goes here - link to alerts and link to panels) </p>
     <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
   </div>
