--- a/new/design/index-en.html
+++ b/new/design/index-en.html
@@ -5,6 +5,22 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
+<style type="text/css">
+blockquote p {font-size:16px;}
+</style>
+<style type="text/css">
+
+.clmn-2-sm {
+	padding-left: 1.1em;
+	list-style: outside;
+}
+.clmn-2-sm li {
+    margin-left: 1.1em;
+}
+
+</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -17,24 +33,36 @@
 <div class="row">
   <div class="col-md-8">
     <div class="row">
-      <div class="col-md-4"> <img src="../design.jpg" alt=""  class="media-object img-responsive img-thumbnail" /> </div>
-      <div class="col-md-8">
+      <div class="col-md-4 col-lg-3 visible-md visible-lg "> <span class="fa-stack fa-5x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-code fa-stack-1x fa-inverse"></span></span> </div>
+      <div class="col-md-8 col-lg-9">
         <p>The design guide offers a large selection of design and layout features for both basic and complex designs:</p>
         <ul class="list-unstyled">
-          <li class="mrgn-bttm-sm"><a href="#quick">Quick view</a> - View all design features on a single page.</li>
-          <li class="mrgn-bttm-sm"><a href="#core">Core design features</a> - These design features are pure CSS and require no added functionality to work.</li>
-          <li><a href="#plugin">Plug-in design features</a> - These design features are a mix of JavaScript and polyfills.</li>
+          <li class="mrgn-bttm-sm"><a href="#core">Core design features</a><br>
+            These design features are pure CSS and require no added functionality to work.</li>
+          <li><a href="#plugin">Plug-in design features</a><br>
+            These design features are a mix of JavaScript and polyfills.</li>
         </ul>
       </div>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group"><a href="index-en.html" class="list-group-item active"> Design guide </a> <a href="../writing/index-en.html" class="list-group-item">Writing guide</a> <a href="../usability/index-en.html" class="list-group-item">Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a></div>
+    <div class="list-group hidden-xs hidden-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-code fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
   </div>
 </div>
+<div class="row">
+<div class="col-md-8">
 <div class="well">
   <h2 class="mrgn-tp-0" id="quick">Quick view</h2>
-  <p>View all design features on a single page: <a href="options-en.html" class="btn btn-primary">Snapshot of design features</a></p>
+  <p>View all design features on a single page: <a href="options-en.html" class="btn btn-primary">Demo of all design features</a></p>
+</div>
+</div>
+<div class="col-md-4">
+<blockquote>
+      <p>Industry data shows that for each dollar spent to fix a problem during product design, $10 are spent to fix the same problem in product development, and $100 or more are spent to fix the same problem after product release.</p>
+      <p class="text-right">-Claire Marie Karat<br>
+        <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/">A business case approach to usability cost justification</a></p>
+    </blockquote>
+</div>
 </div>
 <div class="well">
   <h2  id="core" class="mrgn-tp-0">Core design features <small>CSS-only design features</small></h2>
@@ -326,5 +354,6 @@
   </table>
 </div>
 <p><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for these pages is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<div class="list-group visible-xs visible-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-code fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
 </body>
 </html>
