--- a/new/design/jumbotron-en.html
+++ b/new/design/jumbotron-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,17 +36,17 @@
     <div class="col-md-4 pull-right mrgn-bttm-lg">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed Interface:  Carousel<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
     <div class="mrgn-lft-md mrgn-rght-md">
-      <h2 id="description">Description</h2>
+      <h2 class="page-header" id="description">Description</h2>
       <p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p>
     </div>
   </div>
-  <h2 id="default">Default jumbotron</h2>
+  <h2 class="page-header" id="default">Default jumbotron</h2>
   <div class="jumbotron">
     <h1>Hello, world!</h1>
     <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -68,7 +70,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="full">Full width jumbotron</h2>
+  <h2 class="page-header" id="full">Full width jumbotron</h2>
   <p>To make the jumbotron full width, and without rounded corners, place it outside all <code>.container</code>s and instead add a <code>.container</code> within.</p>
   <div class="mrgn-tp-lg">
     <pre><code>&lt;div class=&quot;jumbotron&quot;&gt;
