--- a/new/design/position-en.html
+++ b/new/design/position-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,18 +36,18 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="grids-en.html" class="list-group-item">Grids<span class="wb-inv"> - Design guide</span></a> <a href="proximity-en.html" class="list-group-item">Margin proxmity<span class="wb-inv"> - Design guide</span></a> <a href="images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="opacity-en.html" class="list-group-item">Opacity<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>By default, grids cells float left and stack side-by-side, forming rows from left to right. However, you can use positional CSS to layer them on top of each other. The parent cell will act as the container, and the child cells can be layered horizontally and vertically within the container, on top of other cells.</p>
   <div class="alert alert-info">
     <p><strong>Note:</strong> The layer that is to appear behind the absolutely position object must have a CSS property that is anything but <code>static</code>. For example, grids have a CSS property of <code>position: relative</code>, so they work well with this design feature. </p>
   </div>
-  <h2 id="options">Positioning options</h2>
+  <h2 class="page-header" id="options">Positioning options</h2>
   <p>The broswer will always position content on the top left. To modify the default placement, both the x and y position must be defined. The x positions are <code>pstn-left-*</code> and <code>pstn-rght-*</code>. The y positions are <code>pstn-tp-*</code> and <code>pstn-bttm-*</code>. Since positions and work together, then the posting is also responsive, so that when the grid system linearizes for smaller viewports, so do the positioning. </p>
   <table class="table table-bordered">
     <tr>
@@ -87,7 +89,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="examples">Positioning examples</h2>
+  <h2 class="page-header" id="examples">Positioning examples</h2>
   <div class="row">
     <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
       <div class="row">
