--- a/new/design/progress-en.html
+++ b/new/design/progress-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -37,20 +39,20 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide</h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html" class="list-group-item">Progress polyfill (progress bar)<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>Provide up-to-date feedback on the progress of a workflow or action with simple yet flexible progress bars.</p>
   <p>Provide up-to-date feedback on the progress of a workflow or action with simple yet flexible progress bars.</p>
   <div class="alert alert-danger">
     <h4>Cross-browser compatibility</h4>
     <p>Progress bars use CSS3 transitions and animations to achieve some of their effects. These features are not supported in Internet Explorer 9 and below or older versions of Firefox. Opera 12 does not support animations.</p>
   </div>
-  <h2 id="basic">Basic progress bar</h2>
+  <h2 class="page-header" id="basic">Basic progress bar</h2>
   <p>Default progress bar.</p>
   <div class="progress">
     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"> <span class="sr-only">60% Complete</span> </div>
@@ -73,7 +75,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="coloured">Coloured progress bar</h2>
+  <h2 class="page-header" id="coloured">Coloured progress bar</h2>
   <p>Progress bars use some of the same button and alert classes for consistent styles.</p>
   <div class="progress">
     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"> <span class="sr-only">40% Complete (success)</span> </div>
@@ -120,7 +122,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="striped">Striped progress bar</h2>
+  <h2 class="page-header" id="striped">Striped progress bar</h2>
   <p>Uses a gradient to create a striped effect. Not available in IE8.</p>
   <div class="progress progress-striped" >
     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"> <span class="sr-only">40% Complete (success)</span> </div>
@@ -167,7 +169,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="animated">Animated progress bar</h2>
+  <h2 class="page-header" id="animated">Animated progress bar</h2>
   <p>Add <code>.active</code> to <code>.progress-striped</code> to animate the stripes right to left. Not available in all versions of IE.</p>
   <div class="progress progress-striped active">
     <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"><span class="sr-only">45% Complete</span></div>
@@ -190,7 +192,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="stacked">Stacked progress bar</h2>
+  <h2 class="page-header" id="stacked">Stacked progress bar</h2>
   <p>Place multiple bars into the same <code>.progress</code> to stack them.</p>
   <div class="progress">
     <div class="progress-bar progress-bar-success" style="width: 35%"> <span class="sr-only">35% Complete (success)</span> </div>
