--- a/new/design/wells-en.html
+++ b/new/design/wells-en.html
@@ -5,6 +5,8 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -34,15 +36,15 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Design guide </h2>
+          <h2 class="panel-title"><span class="fa fa-code text-muted"></span> Design guide </h2>
         </div>
         <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
-  <h2 id="description">Description</h2>
+  <h2 class="page-header" id="description">Description</h2>
   <p>Use the well as a simple effect on an element to give it an inset effect.</p>
-  <h2 id="default">Default well</h2>
+  <h2 class="page-header" id="default">Default well</h2>
   <div class="well"> Look, I'm in a well! </div>
   <div class="mrgn-tp-lg">
     <pre><code>&lt;div class=&quot;well&quot;&gt;...&lt;/div&gt;
@@ -58,7 +60,7 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h2 id="sizing">Well sizing</h2>
+  <h2 class="page-header" id="sizing">Well sizing</h2>
   <p>Control padding and rounded corners with two optional modifier classes.</p>
   <div class="well well-lg"> Look, I'm in a large well! </div>
   <div class="mrgn-tp-lg">
