--- a/new/index-en.html
+++ b/new/index-en.html
@@ -5,6 +5,9 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
+<link rel="stylesheet" href="design/fa/css/font-awesome.min.css">
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -13,109 +16,90 @@
   <li>Style guide</li>
 </ol>
 <h1>Style guide</h1>
-<p>The style guide is broken down two ways, by category and by user role, both ultimately taking you to the same information. Adherence to documentation is mandatory, as it will ensure that content is accessible, usable, well formatted, well written and well positioned for future changes.</p>
 <div class="row">
-  <div class="col-md-6">
-    <div class="well">
-      <h2 id="category" class="mrgn-tp-0">By category</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Design guide</h3>
-              <p>Offers a large selection of design and layout features for both basic and complex designs.</p>
-              <p><a href="design/index-en.html"><img src="design.jpg" alt="Design guide" class="img-responsive" /></a></p>
-              <p><a href="design/index-en.html" class="btn btn-primary btn-block">Design guide</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Writing guide</h3>
-              <p>Create content that is written for the web and follows specific technical writing requirements.</p>
-              <p><a href="writing/index-en.html"><img src="writing.jpg" alt="Writing guide" class="img-responsive" /></a></p>
-              <p><a href="writing/index-en.html" class="btn btn-primary btn-block">Writing guide</a></p>
-            </div>
+  <div class="col-md-8">
+    <p>The style guide is broken down two ways - by category and by user role - both ultimately taking you to the same information.</p>
+    <p> Adherence to documentation is mandatory, as it will ensure that content is accessible, usable, well formatted, well written and well positioned for future changes.</p>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h2 class="mrgn-tp-0 h3">Design guide</h2>
+            <p>Offers a large selection of design and layout features for both basic and complex designs.</p>
+            <p class="text-center hidden-xs hidden-sm"><a href="design/index-en.html"><span class="fa-stack text-muted fa-3x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-code fa-stack-1x fa-inverse"></span> <span class="wb-inv">Design guide</span> </span></a></p>
+            <p><a href="design/index-en.html" class="btn btn-primary btn-block">Design guide</a></p>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="panel panel-default mrgn-bttm-0">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Usability guide</h3>
-              <p>User behaviour needs to be understood in order to create content that is usable.</p>
-              <p><a href="usability/index-en.html"><img src="usability.jpg" alt="Usability guide" class="img-responsive" /></a></p>
-              <p><a href="usability/index-en.html" class="btn btn-primary btn-block">Usability guide</a></p>
-            </div>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h2 class="mrgn-tp-0 h3">Writing guide</h2>
+            <p>Create content that is written for the web and follows specific technical writing requirements.</p>
+            <p class="text-center hidden-xs hidden-sm"><a href="writing/index-en.html"><span class="fa-stack text-muted fa-3x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-font fa-stack-1x fa-inverse"></span> <span class="wb-inv">Writing guide</span> </span></a></p>
+            <p><a href="writing/index-en.html" class="btn btn-primary btn-block">Writing guide</a></p>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="panel panel-default mrgn-bttm-0">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Accessibility guide</h3>
-              <p>Create and code content so that is accessible to all users, regardless of ability or disability.</p>
-              <p><a href="accessibility/index-en.html"><img src="accessibility.jpg" alt="Accessibility guide" class="img-responsive" /></a></p>
-              <p><a href="accessibility/index-en.html" class="btn btn-primary btn-block">Accessibility guide</a></p>
-            </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h2 class="mrgn-tp-0 h3">Usability guide</h2>
+            <p>User behaviour needs to be understood in order to create content that is usable.</p>
+            <p class="text-center hidden-xs hidden-sm"><a href="usability/index-en.html"><span class="fa-stack text-muted fa-3x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-smile-o fa-stack-1x fa-inverse"></span> <span class="wb-inv">Usability guide</span> </span></a></p>
+            <p><a href="usability/index-en.html" class="btn btn-primary btn-block">Usability guide</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h2 class="mrgn-tp-0 h3">Accessibility guide</h2>
+            <p>Create and code content so that is accessible to all users, regardless of ability or disability.</p>
+            <p class="text-center hidden-xs hidden-sm"><a href="accessibility/index-en.html"><span class="fa-stack text-muted fa-3x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-wheelchair fa-stack-1x fa-inverse"></span> <span class="wb-inv">Accessibility guide</span> </span></a></p>
+            <p><a href="accessibility/index-en.html" class="btn btn-primary btn-block">Accessibility guide</a></p>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="well">
-      <h2 id="role" class="mrgn-tp-0">By user role</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Author role</h3>
-              <p>Showcases the information that an <strong>author, content creator or content coordinator</strong> would need to know.</p>
-              <p><a href="role/author-en.html" class="btn btn-info btn-block">Author role</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Webmaster / Developer role</h3>
-              <p>Showcases the information that a <strong>webmaster or developer</strong> would need to know.</p>
-              <p><a href="role/webmaster-en.html" class="btn btn-info btn-block">Webmaster / Developer role</a></p>
-            </div>
-          </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h3">Author role</h2>
+          <p>For the <strong>author, content creator or content coordinator</strong>.</p>
+          <p><a href="role/author-en.html" class="btn btn-info btn-block">Author role</a></p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Designer role</h3>
-              <p>Showcases the information that a <strong>graphic designer, interaction designer or prototyper</strong> would need to know.</p>
-              <p><a href="role/designer-en.html" class="btn btn-info btn-block">Designer role</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">IM / IA role</h3>
-              <p>Showcases the information that an <strong>information manager or information architecture</strong> would need to know.</p>
-              <p><a href="role/ia-en.html" class="btn btn-info btn-block">IM / IA role</a></p>
-            </div>
-          </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h3">Webmaster / Developer role</h2>
+          <p>For the <strong>webmaster or developer</strong>.</p>
+          <p><a href="role/webmaster-en.html" class="btn btn-info btn-block">Webmaster / Developer role</a></p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="panel panel-default mrgn-bttm-0">
-            <div class="panel-body">
-              <h3 class="mrgn-tp-0">Manager role</h3>
-              <p>Showcases the information that a <strong>manager</strong> or <strong>project manager</strong> would need to know.</p>
-              <p><a href="role/manager-en.html" class="btn btn-info btn-block">Manager role</a></p>
-            </div>
-          </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h3">Designer role</h2>
+          <p>For the <strong>graphic designer, interaction designer or prototyper</strong>.</p>
+          <p><a href="role/designer-en.html" class="btn btn-info btn-block">Designer role</a></p>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h3">IM / IA role</h2>
+          <p>For the <strong>information manager or information architecture</strong>.</p>
+          <p><a href="role/ia-en.html" class="btn btn-info btn-block">IM / IA role</a></p>
+        </div>
+      </div>
+      <div class="panel panel-default mrgn-bttm-0">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h3">Manager role</h2>
+          <p>For the <strong>manager</strong> or <strong>project manager</strong>.</p>
+          <p><a href="role/manager-en.html" class="btn btn-info btn-block">Manager role</a></p>
         </div>
       </div>
     </div>
