--- a/new/usability/index-en.html
+++ b/new/usability/index-en.html
@@ -5,6 +5,11 @@
 <title>Untitled Document</title>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/wet-boew.min.css"/>
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
+<style type="text/css">
+blockquote p {font-size:16px;}
+</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -17,17 +22,24 @@
 <div class="row">
   <div class="col-md-8">
     <div class="row">
-      <div class="col-md-4"> <img src="../usability.jpg" alt=""  class="media-object img-responsive img-thumbnail mrgn-bttm-lg" /> </div>
-      <div class="col-md-8">
+      <div class="col-md-4 col-lg-3 visible-md visible-lg "><span class="fa-stack fa-5x"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-smile-o fa-stack-1x fa-inverse"></span></span> </div>
+      <div class="col-md-8 col-lg-9">
         <p>The usability guide provides content authors and webmasters with an understanding of how user behaviour impacts whether content is usable or not.</p>
+        <p>(info goes here)</p>
       </div>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"> Design guide </a> <a href="../writing/index-en.html" class="list-group-item">Writing guide</a> <a href="index-en.html" class="list-group-item active">Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a></div>
+    <div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-code text-muted"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item active"><span class="fa fa-smile-o fa-inverse"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
+    <blockquote>
+      <p>Quote here</p>
+      <p class="text-right">-Name</a></p>
+    </blockquote>
+    <blockquote>
+      <p>Quote here</p>
+      <p class="text-right">-Name</a></p>
+    </blockquote>
   </div>
-  <p>This is a placeholder page for all the content that Laura Wesley and others have come up with about Usability. </p>
-  <p>There is a ton of content GCPedia etc that can be migrated here. </p>
 </div>
 </body>
 </html>
